--- a/index.html
+++ b/index.html
@@ -2,89 +2,105 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add-to-cart</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Add-to-cart</title>
 
-    <!-- tailwind css -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- bootstrap css link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- tailwind css -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- bootstrap css link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body >
-    <!-- header section -->
-    <header class="p-4 md:p-10 lg:p-20">
-        <!-- nav bar -->
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand">Shopping Cart</a>
-              <div class="d-flex">
-                <button>Cart</button>
-              </div>
-              <!-- <form class="d-flex">
+<body>
+  <!-- header section -->
+  <header class="px-8 py-4">
+
+    <!-- nav bar -->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand">Shopping Cart</a>
+        <div class="d-flex">
+          <button type="button" class="btn position-relative">
+            <i class="fa-solid fa-cart-shopping text-4xl text-blue-600"></i>
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+              0
+              <!-- <span class="visually-hidden">unread messages</span> -->
+            </span>
+          </button>
+        </div>
+        <!-- <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form> -->
-            </div>
-          </nav>
-    </header>
-    <!-- main section -->
-    <main class="p-5 md:p-10 lg:p-20">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-5">
-            <!-- product 1 -->
-            <div class="card">
-                <img src="./assets/product1.jpg" class="card-img-top" alt="...">
-                <div class="card-body space-y-5">
-                  <h5 class="card-title text-xl font-semibold">Camera 1</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <h2 class="text-2xl font-bold">price : $ 50</h2>
-                  <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
-                </div>
-              </div>
-            <!-- product 2 -->
-            <div class="card">
-                <img src="./assets/product2.jpg" class="card-img-top" alt="...">
-                <div class="card-body space-y-5">
-                  <h5 class="card-title text-xl font-semibold">Camera 2</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <h2 class="text-2xl font-bold">price : $ 70</h2>
-                  <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
-                </div>
-              </div>
-            <!-- product 3 -->
-            <div class="card">
-                <img src="./assets/product1.jpg" class="card-img-top" alt="...">
-                <div class="card-body space-y-5">
-                  <h5 class="card-title text-xl font-semibold">Camera 1</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <h2 class="text-2xl font-bold">price : $ 50</h2>
-                  <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
-                </div>
-              </div>
-              <!-- product 4 -->
-            <div class="card">
-                <img src="./assets/product1.jpg" class="card-img-top" alt="...">
-                <div class="card-body space-y-5">
-                  <h5 class="card-title text-xl font-semibold">Camera 1</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <h2 class="text-2xl font-bold">price : $ 50</h2>
-                  <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
-                </div>
-              </div>
+      </div>
+    </nav>
+  </header>
+  <!-- main section -->
+  <main class="p-5 md:p-10 lg:p-20">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-5">
+      <!-- product 1 -->
+      <div class="card">
+        <img src="./assets/product1.jpg" class="card-img-top" alt="...">
+        <div class="card-body space-y-5">
+          <h5 class="card-title text-xl font-semibold">Camera 1</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <h2 class="text-2xl font-bold">price : $ 50</h2>
+          <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
         </div>
-    </main>
-    
-    <!-- bootstrap js link -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-    <!-- vanilla js -->
-    <script src="./script.js"></script>
+      </div>
+      <!-- product 2 -->
+      <div class="card">
+        <img src="./assets/product2.jpg" class="card-img-top" alt="...">
+        <div class="card-body space-y-5">
+          <h5 class="card-title text-xl font-semibold">Camera 2</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <h2 class="text-2xl font-bold">price : $ 70</h2>
+          <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
+        </div>
+      </div>
+      <!-- product 3 -->
+      <div class="card">
+        <img src="./assets/product1.jpg" class="card-img-top" alt="...">
+        <div class="card-body space-y-5">
+          <h5 class="card-title text-xl font-semibold">Camera 1</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <h2 class="text-2xl font-bold">price : $ 50</h2>
+          <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
+        </div>
+      </div>
+      <!-- product 4 -->
+      <div class="card">
+        <img src="./assets/product1.jpg" class="card-img-top" alt="...">
+        <div class="card-body space-y-5">
+          <h5 class="card-title text-xl font-semibold">Camera 1</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <h2 class="text-2xl font-bold">price : $ 50</h2>
+          <a href="#" class="btn btn-primary hover:bg-slate-400">Add to cart</a>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- bootstrap js link -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+  </script>
+  
+  <!-- vanilla js -->
+  <script src="./script.js"></script>
 </body>
 
 </html>
